# pennytrader

./: .gitignore  CLAUDE.md  FOLLOWUPS.md  README.md  config.yaml  config.yaml.example  main.py  pyproject.toml
agent/: dream.py  prompt.py  runner.py
analytics/: learnings.py  ledger.py  performance.py
backtest/: __main__.py  broker.py  cache.py  cli.py  clock.py  matcher.py  promote.py  runner.py
connector/: account.py  connection.py  exceptions.py  market_data.py  options.py  orders.py
data/: collector.py  store.py
docs/superpowers/plans/: 2026-05-02-moomoo-connector.md  2026-05-03-backtest-harness.md  2026-05-03-holiday-calendar.md  2026-05-03-order-status-subscription.md  2026-05-03-performance-analytics.md  2026-05-03-precomputed-indicators.md  2026-05-03-strategy-layer.md
docs/superpowers/specs/: 2026-05-02-moomoo-connector-design.md  2026-05-03-backtest-harness-design.md  2026-05-03-holiday-calendar-design.md  (+4 more)
engine/: calendar.py  config.py  executor.py  loop.py  market_hours.py  safe_orders.py
tests/agent/: test_dream.py  test_prompt.py  test_runner.py
tests/analytics/: test_learnings.py  test_ledger.py  test_performance.py
tests/backtest/: test_broker.py  test_cache.py  test_clock.py  test_matcher.py  test_promote.py  test_runner.py
tests/connector/: test_account.py  test_connection.py  test_exceptions.py  test_market_data.py  test_options.py  test_orders.py
tests/data/: test_collector.py  test_store.py
tests/engine/: test_calendar.py  test_config.py  test_executor.py  test_loop.py  test_market_hours.py  test_safe_orders.py
